--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,12 @@ form {
     width: 60vw;
 }
 
+input, textarea, select {
+    width: 100%;
+    margin: 0;
+    margin-top: 10px;
+  }
+
 fieldset {
     border: none;
     padding-left: 0px;
@@ -35,4 +41,11 @@ fieldset {
 
 fieldset:not(:last-of-type) {
     border-bottom:3px solid #3b3b4f;
+}
+
+.inline {
+    width: unset;
+    margin: 0;
+    margin-right: 0.5em;
+    vertical-align: middle;
 }
