--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,14 @@ input, textarea, select {
     width: 100%;
     margin: 0;
     margin-top: 10px;
-  }
+    min-height: 2em;
+}
+
+input, textarea {
+    background-color: #0a0a23;
+    border: 1px solid #0a0a23;
+    color: #ffffff;
+}
 
 fieldset {
     border: none;
