--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,16 @@ fieldset:not(:last-of-type) {
     margin-right: 0.5em;
     vertical-align: middle;
 }
+
+input[type="submit"] {
+    background-color: #3b3b4f;
+    border: white;
+    display: block;
+    width: 60%;
+    min-width: 300px;
+    margin: 0 auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    height: 2em;
+    font-size: 1.1em;
+}
